--- a/main.html
+++ b/main.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Favourite Animal</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>My Favourite Animal</h1>
+    <img src="https://example.com/dog.jpg" alt="A cute dog lying on the grass" />
 </body>
-
 </html>
