--- a/main.html
+++ b/main.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>My Favourite Animal</h1>
-    <img src="https://example.com/dog.jpg" alt="A cute dog lying on the grass" />
+    <img src="https://www.pexels.com/photo/two-yellow-labrador-retriever-puppies-1108099/" alt="two yellow labrador or retriever puppies" />
 </body>
 </html>
